courses/430_programming-languages/assignment-4/tests/error/error08.sml
val prog =
  PROGRAM
    {decls=[],
     stmts=[ST_EXP {exp=EXP_BINARY {lft=EXP_NONE,opr=BOP_LT,rht=EXP_NUM 3}}]}
  : program
;
